# app/Virtual/Models/BrandSettings.php
@@ -1,0 +1,102 @@
+<?php
+
+namespace App\Virtual\Models;
+/**
+ * @OA\Schema(
+ *     title="BrandSettings",
+ *     description="BrandSettings model",
+ *     @OA\Xml(
+ *         name="BrandSettings"
+ *     )
+ * )
+ */
+class BrandSettings
+{
+
+    /**
+     * @OA\Property(
+     *     title="ID",
+     *     description="ID",
+     *     format="int64",
+     *     example=1
+     * )
+     *
+     * @var integer
+     */
+    private $id;
+
+    /**
+     * @OA\Property(
+     *      title="app_name",
+     *      description="Name of the new project",
+     *      example="A nice project"
+     * )
+     *
+     * @var string
+     */
+    public $app_name;
+
+    /**
+     * @OA\Property(
+     *      title="theme_color",
+     *      description="theme_color",
+     *      example="Pink"
+     * )
+     *
+     * @var string
+     */
+    public $theme_color;
+
+    /**
+     * @OA\Property(
+     *     title="Created at",
+     *     description="Created at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $created_at;
+
+    /**
+     * @OA\Property(
+     *     title="Updated at",
+     *     description="Updated at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $updated_at;
+
+    /**
+     * @OA\Property(
+     *     title="Deleted at",
+     *     description="Deleted at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $deleted_at;
+
+    /**
+     * @OA\Property(
+     *      title="secondary_color",
+     *      description="Author's id of the new project",
+     *      format="int64",
+     *      example=1
+     * )
+     *
+     * @var integer
+     */
+    public $secondary_color;
+
+
+}
