# app/Virtual/Resources/BrandSettingsResource.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Virtual\Resources;
+use App\Virtual\Models\BrandSettings;
+/**
+ * @OA\Schema(
+ *     title="BrandSettingsResource",
+ *     description="BrandSettings resource",
+ *     @OA\Xml(
+ *         name="BrandSettingsResource"
+ *     )
+ * )
+ */
+class BrandSettingsResource
+{
+    /**
+     * @OA\Property(
+     *     title="Data",
+     *     description="Data wrapper"
+     * )
+     *
+     * @var \App\Virtual\Models\BrandSettings[]
+     */
+    private $data;
+}
